# Robot_pet

./: ASR.py  ASRcmd.srv.txt  README  README.md  README_cn.md  test_FD.py  voice_assistant_demo.py  wifi.sh
LLM_interface/: .test_audio.py.swp  find_voice.py  test_audio.py  voice_assistant_demo.py
LLM_interface/utils/: find_voice.py  gpio.py  test_audio.py
MQTT/: generate_pswd.py  link.py  tuya_mqtt.py
MQTT/tuyalink/: pom.xml  tuya_mqtt_sign.py
RDK_X5/LLM_interface/: voice_assistant_demo.py
RDK_X5/LLM_interface/utils/: ag_pc.py
RDK_X5/MQTT/: tuya_mqtt.py
RDK_X5/UI/: UI.py
RDK_X5/face_ws/face_detection/: face_detector_core.py  predict_video.py
RDK_X5/face_ws/face_recog/: face_detection.py
RDK_X5/face_ws/face_recog/model_output_dir/: FD_calibrated_model.onnx  FD_quant_info.json  RF_quant_info.json  caculate.py  caculate_onnx.py  main_graph_subgraph_0.json  test.py
RDK_X5/face_ws/face_recog/models/onnx/: FD.onnx
RDK_X5/face_ws/face_recognition/: test_camera.py
RDK_X5/hand_ws/: start.sh
RDK_X5/hand_ws/hand_gesture_detection/: CMakeLists.txt
RDK_X5/hand_ws/hand_gesture_detection/include/: hand_gesture_det_node.h  lmks_process.h
RDK_X5/hand_ws/hand_gesture_detection/src/: gesture_preprocess.cpp  main.cpp
RDK_X5/hand_ws/hand_lmk_detection/: CMakeLists.txt
RDK_X5/hand_ws/hand_lmk_detection/include/: ai_msg_manage.h  hand_lmk_det_node.h
RDK_X5/hand_ws/hand_lmk_detection/src/: hand_lmk_det_node.cpp  hand_lmk_output_parser.cpp
RDK_X5/hand_ws/mono2d_body_detection/src/: mono2d_body_det_node.cpp
RDK_X5/main/: PerceptionMonitor.py  faces.db
RDK_X5/main/utils/: test_qos.py
STM32F103c8T6/: Project.uvguix.lenovo  Project.uvoptx  Project.uvprojx
STM32F103c8T6/HardWare/: PetAction.h
STM32F103c8T6/Listings/: startup_stm32f10x_md.lst
STM32F103c8T6/Objects/: Project.build_log.htm  bluetooth.crf  face_config.crf  oled.crf  oled_data.crf  petaction.crf  pwm.crf  pwm.d  servo.crf
STM32F103c8T6/test/: Project.uvguix.Li_siyao
STM32F103c8T6/test/HardWare/: BlueTooth.c  PetAction.c
STM32F103c8T6/test/Listings/: Project.map
STM32F103c8T6/test/Objects/: Project.hex  Project.htm  Project_Target 1.dep  bluetooth.d  delay.crf  face_config.d  main.crf  main.d  petaction.d  servo.d
STM32F103c8T6/test/User/: main.c
face_ws/: CHANGELOG.md
face_ws/client_sqlite/: face_sqlite.py
face_ws/doraemon/install/: local_setup.sh
face_ws/face_detection/: .gitignore  onnx_performance_log.csv  predict_video.py  retinaface.onnx
face_ws/face_recog/: 11.py  detect_imgs2.py  face_detection.py  inference.py  test11.py
face_ws/face_recog/install/: local_setup.sh  setup.sh  spawn_shell.bash
face_ws/face_recog/model_output_dir/: FD_optimized_float_model.onnx  FD_original_float_model.onnx  FD_quantized_model.onnx  RF_calibrated_model.onnx  RF_optimized_float_model.onnx  RF_original_float_model.onnx  RF_quantized_model.onnx  caculate.py  caculate_onnx.py  main_graph_subgraph_0.html  test.py
face_ws/face_recog/models/pretrained/: trans.py
face_ws/face_recog/src/face_recog/: setup.py
face_ws/face_recog/vision/nn/: mb_tiny.py  mb_tiny_RFB.py  multibox_loss.py
face_ws/face_recog/vision/ssd/: data_preprocessing.py  data_preprocessing.py.bak  data_preprocessing_fixed.py  mb_tiny_RFB_fd.py  mb_tiny_fd.py  predictor.py  ssd.py
face_ws/face_recog/vision/utils/: box_utils.py  misc.py
face_ws/face_recognition/: faces.db  infer_onnx.py  inference.py
face_ws/opencv/: face_sqlite.py  faces.db  inference.py  test_camera.py
face_ws/opncv_face_rcg/install/: setup.sh  spawn_shell.bash
face_ws/opncv_face_rcg/install/face_rec/share/face_rec/: package.dsv  package.ps1  package.xml
face_ws/opncv_face_rcg/src/face_rec/: pyproject.toml  setup.cfg  setup.py
hand_reader/: hand_reader_node.py  test.py
hand_reader/install/: local_setup.sh  setup.sh  spawn_shell.bash
hand_reader/src/hand_reader/: .hand_reader_node.py.swp  package.xml  setup.cfg  setup.py
hand_reader/src/hand_reader/hand_reader/: .hand_reader_node.py.swp  USART.py  hand_reader.srv  hand_reader_node.py  usart_test.py
hand_reader/src/hand_reader/launch/: hand_reader.launch.py
hand_ws/: start.sh
hand_ws/hand_gesture_detection/include/: gesture_data.h  gesture_postprocess.h  gesture_postprocess_util.h  gesture_preprocess.h  vote.hpp
hand_ws/hand_gesture_detection/src/: gesture_postprocess.cpp  gesture_postprocess_util.cc  hand_gesture_det_node.cpp  lmks_process.cpp
hand_ws/hand_lmk_detection/include/: hand_lmk_output_parser.h
hand_ws/hand_lmk_detection/src/: ai_msg_manage.cpp  main.cpp
hand_ws/mono2d_body_detection/: CHANGELOG.md  CMakeLists.txt
hand_ws/mono2d_body_detection/include/: mono2d_body_det_node.h
main/: PerceptionMonitor.py  faces.db  gpio_test.py  main.py  test_qos.py
main/utils/: gpio_test.py  test.py
(+28 files in other folders)
