<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>face_rec</name>
  <version>0.0.0</version>
  <description>ROS2 package for face recognition using OpenCV and sensor data.</description>
  <maintainer email="231180167@smail.nju.edu.cn">wxy</maintainer>
  <license>MIT</license>

  <!-- 构建工具依赖 -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- 核心ROS依赖 -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <!-- 执行依赖 -->
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>python3-opencv</exec_depend> <!-- 或改用PyPI的opencv-python -->

  <!-- 测试依赖 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

